Mock messaging for UI testing

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -2,9 +2,5 @@
 <p>body works!</p>
 <p>body works!</p>
 
-<div fxLayout="row">
-    <app-chats></app-chats>
-    <div fxLayout="column">
-        <app-messaging [username]="username"></app-messaging>
-    </div>
-</div>
+<app-messaging [userID]="userID"
+               [chatID]="1"></app-messaging>
