add high level ui structure

--- a/src/app/codes-list/codes-list.component.html
+++ b/src/app/codes-list/codes-list.component.html
@@ -1,1 +1,9 @@
-<p>codes-list works!</p>
+<div fxLayout="row" style="height: inherit;">
+    <!--Expand/Collapse Button (change to chevron_right if open)-->
+    <div fxLayout="column" fxLayoutAlign="center center"
+         style="height: inherit; background-color: grey;">
+        <mat-icon>chevron_left</mat-icon>
+    </div>
+    <!-- Code Lists -->
+    <div style="height: inherit;"></div>
+</div>
