--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,10 +1,12 @@
-<p>body works!</p>
-<p>body works!</p>
-<p>body works!</p>
-
-<div fxLayout="row">
-    <app-chats></app-chats>
-    <div fxLayout="column">
-        <app-messaging [username]="username"></app-messaging>
+<div fxLayout="row" style="min-width: 600px; width: 100%; height: 100%;">
+    <!--Left Sidebar-->
+    <app-chats style="width: 20%; height: 100%;"></app-chats>
+    <div fxLayout="column" fxLayoutAlign="space-between start" style="height: 100%; min-width: 0px; flex-grow: 1;">
+        <!--Top Sidebar-->
+        <app-info-bar></app-info-bar>
+        <!--Messaging Part-->
+        <app-messaging></app-messaging>
     </div>
+    <!--Right Sidebar, Codes (can expand/collapse)-->
+    <app-codes-list style="width: fit-content; height: 100%;"></app-codes-list>
 </div>
