--- a/src/app/chats/chats.component.html
+++ b/src/app/chats/chats.component.html
@@ -1,1 +1,19 @@
-<p>chats works!</p>
+<div fxLayout="column" fxLayoutGap="16px">
+    <!--Icons for switching between groups/friends-->
+    <div fxLayout="row" fxLayoutAlign="space-around center">
+        <mat-icon>person</mat-icon>
+        <mat-icon>groups</mat-icon>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <!--Scrollable list of groups/friends-->
+    <div fxLayout="column" fxLayoutGap="16px" style="overflow: scroll">
+        <!--iterate through the list here-->
+    </div>
+
+    <mat-divider></mat-divider>
+    
+    <!--Your profile-->
+
+</div>
