--- a/src/app/info-bar/info-bar.component.html
+++ b/src/app/info-bar/info-bar.component.html
@@ -1,1 +1,5 @@
-<p>info-bar works!</p>
+<div fxLayout="row" fxLayoutGap="16px" style="padding-left: 16px">
+    <!--Group Picture-->
+    <!--Group Name-->
+    <span style="font-size: 16px;">GROUP NAME HERE</span>
+</div>
