--- a/src/app/info-bar/info-bar.component.html
+++ b/src/app/info-bar/info-bar.component.html
@@ -1,5 +1,6 @@
-<div fxLayout="row" fxLayoutGap="16px" style="padding-left: 16px">
+<div fxLayout="row" fxLayoutGap="16px" style="padding-left: 16px; width: inherit;">
     <!--Group Picture-->
+    
     <!--Group Name-->
-    <span style="font-size: 16px;">GROUP NAME HERE</span>
+    <span class="truncate" style="font-size: 16px;">GROUP NAME HERE</span>
 </div>
