--- a/src/app/chats/chats.component.html
+++ b/src/app/chats/chats.component.html
@@ -10,10 +10,11 @@
     <!--Scrollable list of groups/friends-->
     <div fxLayout="column" fxLayoutGap="16px" style="overflow: scroll">
         <!--iterate through the list here-->
+        <button *ngFor="let chat of chats" (click)="handleChangeChat(chat)">{{chat}}</button>
     </div>
 
     <mat-divider></mat-divider>
-    
+
     <!--Your profile-->
 
 </div>
