--- a/src/app/info-bar/info-bar.component.html
+++ b/src/app/info-bar/info-bar.component.html
@@ -2,5 +2,8 @@
     <!--Group Picture-->
     
     <!--Group Name-->
-    <span class="truncate" style="font-size: 16px;">GROUP NAME HERE</span>
+    <div (click)="openDialog()">
+        <span class="truncate" style="font-size: 16px;">GROUP NAME HERE</span>
+    </div>
+    
 </div>
