--- a/src/app/info-page/info-page.component.html
+++ b/src/app/info-page/info-page.component.html
@@ -6,3 +6,6 @@
     <mat-card-title class="truncate cursor-pointer">displayname</mat-card-title>
     <mat-card-subtitle class="truncate cursor-pointer user-name">username</mat-card-subtitle>
 </mat-card-header-->
+
+I am group info.
+Fear me
