--- a/src/app/info-bar/info-bar.component.html
+++ b/src/app/info-bar/info-bar.component.html
@@ -1,6 +1,6 @@
-<div fxLayout="row" fxLayoutGap="16px" style="padding-left: 16px; width: inherit;">
+<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px" style="padding-left: 16px; width: inherit;">
     <!--Group Picture-->
-    
+    <span>pic here</span>
     <!--Group Name-->
     <span class="truncate" style="font-size: 16px;">GROUP NAME HERE</span>
 </div>
