--- a/src/app/codes-list/codes-list.component.html
+++ b/src/app/codes-list/codes-list.component.html
@@ -1,9 +1,11 @@
 <div fxLayout="row" style="height: inherit;">
     <!--Expand/Collapse Button (change to chevron_right if open)-->
-    <div fxLayout="column" fxLayoutAlign="center center"
-         style="height: inherit; background-color: grey;">
-        <mat-icon>chevron_left</mat-icon>
+    <div fxLayout="column" 
+         fxLayoutAlign="center center"
+        style="height: inherit; background-color: grey;">
+        <mat-icon [hidden]="expanded"  (click)="expandToggle()">chevron_left</mat-icon>
     </div>
     <!-- Code Lists -->
-    <div style="height: inherit;"></div>
+    <div style="height: inherit;"
+        [hidden]="expanded"> POPO dedededededededededdededdedededededede </div>
 </div>
