--- a/src/app/messaging/messaging.component.html
+++ b/src/app/messaging/messaging.component.html
@@ -1,15 +1,7 @@
 <div class="mesgs" fxLayout="column" fxLayoutAlign="start start">
     <div class="msg_history">
         <li class="message" *ngFor="let message of messages">
-            <div
-            *ngIf="
-                message.userID !== userID;
-                then incoming_msg;
-                else outgoing_msg
-            "
-            ></div>
-            <ng-template #incoming_msg>
-            <div class="incoming_msg">
+            <div *ngIf="message.userID !== userID" class="incoming_msg">
                 <div class="incoming_msg_img">
                 <img
                     src="https://i.imgur.com/k2PZLZa.png"
@@ -22,14 +14,12 @@
                 </div>
                 </div>
             </div>
-            </ng-template>
-            <ng-template #outgoing_msg>
-            <div class="outgoing_msg">
+            
+            <div *ngIf="message.userID === userID" class="outgoing_msg">
                 <div class="sent_msg">
                 <p>{{ message.text }}</p>
                 </div>
             </div>
-            </ng-template>
         </li>
     </div>
     
