--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" style="min-width: 600px; width: 100%; height: 100%;">
     <!--Left Sidebar-->
-    <app-chats style="width: 20%; height: calc(100% - 24px); padding: 12px 0px 12px 12px;"
+    <app-chats style="max-width: 200px !important; min-width: 200px !important; height: calc(100% - 24px); padding: 12px 0px 12px 12px;"
         (changeChatEvent)="changeChat($event)"></app-chats>
     <div fxLayout="column" fxLayoutAlign="space-between start"
          style="height: 100%; min-width: 0px; flex-grow: 1; padding: 12px 0px">
