added signup page

--- a/src/app/info-bar/info-bar.component.html
+++ b/src/app/info-bar/info-bar.component.html
@@ -6,4 +6,7 @@
         <span class="truncate" style="font-size: 16px;">GROUP NAME HERE</span>
     </div>
     
+    <button mat-raised-button color="primary" (click) = "logout()">
+        Logout
+    </button>
 </div>
