--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,18 +1,40 @@
-<h2>Login</h2>
+<h2>Sign up</h2>
 <form>
+
+    <div class="form-group">
+        <mat-form-field appearance="fill">
+            <mat-label>First Name</mat-label>
+            <input matInput [(ngModel)]="fname" name = "fname">
+        </mat-form-field>
+    </div>
+
+    <div class="form-group">
+        <mat-form-field appearance="fill">
+            <mat-label>Last Name</mat-label>
+            <input matInput [(ngModel)]="lname" name = "lname">
+        </mat-form-field>
+    </div>
+
     <div class="form-group">
         <mat-form-field appearance="fill">
             <mat-label>Enter your email</mat-label>
             
             <input matInput [formControl]="email" required>
             <mat-error *ngIf="email.invalid">Invalid email</mat-error>
-
         </mat-form-field>
     </div>
 
     <div class="form-group">
         <mat-form-field appearance="fill">
-            <mat-label>Enter your password</mat-label>
+            <mat-label>Username</mat-label>
+            <input matInput [(ngModel)]="username" name = "username">
+        </mat-form-field>
+        
+    </div>
+
+    <div class="form-group">
+        <mat-form-field appearance="fill">
+            <mat-label>Create your password</mat-label>
             
             <input matInput [type]="hide ? 'password' : 'text'" 
                             [formControl]="password" required>
@@ -20,14 +42,15 @@
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
             <mat-error *ngIf="password.invalid">{{passwordErrorMessage()}}</mat-error>
-
         </mat-form-field>
     </div>
 
     <div class="form-group">
-        <button mat-raised-button color="primary" (click) = "login()">
-            Login
+        <button mat-raised-button color="primary" (click) = "register()">
+            Sign up
         </button>
-        <a routerLink="/signup">Sign up</a>
+        
+        <a routerLink="/login">Log in</a>
+        
     </div>
 </form>
