profile new page

--- a/src/app/chats/chats.component.html
+++ b/src/app/chats/chats.component.html
@@ -18,6 +18,7 @@
     <!--Your profile-->
     <div fxLayout="column" fxLayoutGap="16px">
         <mat-divider></mat-divider>
-        <div style="height: 42px;">MY PROFILEEE</div>
+        <button (click) = "goToPage('profile')">MY PROFILE</button>
+        <!-- <div style="height: 42px;">MY PROFILEEE</div> -->
     </div>
 </div>
