--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -12,5 +12,6 @@
                        [chatID]="activeChatId"></app-messaging>
     </div>
     <!--Right Sidebar, Codes (can expand/collapse)-->
-    <app-codes-list style="width: fit-content; height: 100%;"></app-codes-list>
+    <app-codes-list style="width: fit-content; height: 100%;"
+                    [chatID]="activeChatId"></app-codes-list>
 </div>
