Code widget refreshing

--- a/src/app/codes-list/codes-list.component.html
+++ b/src/app/codes-list/codes-list.component.html
@@ -7,5 +7,27 @@
     </div>
     <!-- Code Lists -->
     <div style="height: inherit;"
-        [hidden]="expanded"> POPO dedededededededededdededdedededededede </div>
+         [hidden]="expanded"> 
+         
+        POPO dededededededededejjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjddededdedededededede 
+    
+
+        <div class="side-bar">
+            <div class="sec-widget" 
+                 data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
+            </div>
+            </div>
+            <div class="side-bar">
+                <div class="sec-widget" 
+                     data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
+                </div>
+                </div>
+    
+        <div class="padded">
+        <button (click)="inputCode()">
+            IDE
+        </button>
+        </div>
+    </div>
+
 </div>
