--- a/src/app/codes-list/codes-list.component.scss
+++ b/src/app/codes-list/codes-list.component.scss
@@ -1,3 +1,12 @@
 .hidden {
     display: none !important;
 }
+
+.side-bar {
+    width : 200px;
+    height : 200px;
+}
+
+.padded {
+    padding-top: 400px;
+}
