--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,47 @@
-<p>profile works! this is a  new page</p>
+<div style="height: 100vh; width: 100vw" fxLayout="column" fxLayoutAlign="center center">
+
+    <div fxLayout="column" fxLayoutGap="16px">
+
+      <button mat-raised-button color="primary" (click) = "goHome()">home</button>
+
+        <span *ngIf = "match" ng-hide ="editing">
+          <button (click)= "editing = true">Edit Name</button>
+        </span>
+
+        <span ng-show="editing">
+
+          <mat-form-field appearance="fill" style="width: 250px;">
+            <mat-label>{{Name}}</mat-label>
+            <input matInput [formControl]="NewName" required>
+          </mat-form-field>
+
+          <button *ngIf = "match" (click)="editing = false; save(NewName.value,'userName')">Save</button>
+        </span>
+
+
+
+
+        <!-- EMAIL -->
+        <span *ngIf = "match" ng-hide="editing">
+          <button (click)="editing = true">Edit email</button>
+        </span>
+
+        <span ng-show="editing">
+          <mat-form-field appearance="fill" style="width: 250px;">
+            <mat-label>{{email}}</mat-label>
+            <input matInput [formControl]="NewEmail" required>
+          </mat-form-field>
+
+          <button *ngIf = "match" (click)="editing = false; save(NewEmail.value,'email')">Save</button>
+        </span>
+
+
+
+
+
+
+    </div>
+
+
+</div>
+
