--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,34 +5,31 @@
       <button mat-raised-button color="primary" (click) = "goHome()">home</button>
 
         <span *ngIf = "match" ng-hide ="editing">
-          <button (click)= "editing = true">Edit Name</button>
+          <button (click)= "NewName.enable()">Edit Name</button>
         </span>
 
         <span ng-show="editing">
 
-          <mat-form-field appearance="fill" style="width: 250px;">
-            <mat-label>{{Name}}</mat-label>
-            <input matInput [formControl]="NewName" required>
+          <mat-form-field appearance="standard" style="width: 250px;">
+            <!-- <mat-label>Username</mat-label> -->
+            <input matInput placeholder="{{Name}}" [formControl]="NewName" required>
           </mat-form-field>
 
-          <button *ngIf = "match" (click)="editing = false; save(NewName.value,'userName')">Save</button>
+          <button *ngIf = "match" (click)="NewName.disable(); save(NewName.value,'userName')">Save</button>
         </span>
-
-
-
 
         <!-- EMAIL -->
         <span *ngIf = "match" ng-hide="editing">
-          <button (click)="editing = true">Edit email</button>
+          <button (click)="NewEmail.enable()">Edit email</button>
         </span>
 
         <span ng-show="editing">
-          <mat-form-field appearance="fill" style="width: 250px;">
+          <mat-form-field appearance="standard" style="width: 250px;">
             <mat-label>{{email}}</mat-label>
             <input matInput [formControl]="NewEmail" required>
           </mat-form-field>
 
-          <button *ngIf = "match" (click)="editing = false; save(NewEmail.value,'email')">Save</button>
+          <button *ngIf = "match" (click)="NewEmail.disable(); save(NewEmail.value,'email')">Save</button>
         </span>
 
 
