Code widget submissions

--- a/src/app/code-widget/code-widget.component.html
+++ b/src/app/code-widget/code-widget.component.html
@@ -1,12 +1,7 @@
-<p>code-widget works!</p>
-
+<div>
 <div class="sec-widget" 
      id="idInHTML"
      data-id="submission-widget"
      data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
 </div>
-
-<p> po</p>
-{{message}}
-Data:
-<pre id="result" style="height: 100px;">Submit submission to see the result</pre>
+</div>
