--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -13,5 +13,8 @@
     </div>
     <!--Right Sidebar, Codes (can expand/collapse)-->
     <app-codes-list style="width: fit-content; height: 100%;"
-                    [chatID]="activeChatId"></app-codes-list>
+                    [chatID]="activeChatId"
+                    [hidden]="hidden"></app-codes-list>
+
+    <button (click)="click()" style="height : 100px; width : 100px">DONON</button>
 </div>
