--- a/src/app/add-group-chat/add-group-chat.component.html
+++ b/src/app/add-group-chat/add-group-chat.component.html
@@ -1,14 +1,18 @@
 <p>add-chat works!</p>
+<h1>Group Name</h1>
+
 <mat-form-field appearance="fill" style="width: 250px;">
     <mat-label>Search people</mat-label>
     <input matInput [(ngModel)]="searchkey">
 </mat-form-field>
 
 <button mat-raised-button color="primary" (click) = "search()">
-    Search
+    Search  
 </button>
 
-<!-- <mat-action-list>
-    <button mat-list-item *ngFor="let user of userid" (click)="invite(user)"> {{user}} </button>
-</mat-action-list> -->
-
+<mat-selection-list #chosen>
+    <mat-list-option *ngFor="let user of filtered_friends" (click)="invite(user)"> {{user}} </mat-list-option>
+</mat-selection-list>
+<p>
+    {{chosen.selectedOptions.selected.length}} friends selected 
+</p>
