fix double load of messages

--- a/src/app/messaging/messaging.component.html
+++ b/src/app/messaging/messaging.component.html
@@ -32,6 +32,7 @@
           name="newMessage"
           [(ngModel)]="newMessage"
           style="padding-left: 6px;"
+          (keydown.enter)="sendMessage()"
         />
         <button class="msg_send_btn" type="button" (click)="sendMessage()">
             <mat-icon style="margin-top: 3px;">send</mat-icon>
