--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -39,7 +39,8 @@
                 
                 <input matInput [type]="hide ? 'password' : 'text'" 
                                 [formControl]="password" required>
-                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                <button mat-icon-button matSuffix (click)="hide = !hide"
+                    [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide" type="button">
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
                 <mat-error *ngIf="password.invalid">{{passwordErrorMessage()}}</mat-error>
