--- a/src/app/messaging/messaging.component.html
+++ b/src/app/messaging/messaging.component.html
@@ -6,6 +6,7 @@
                 <img
                     src="https://i.imgur.com/k2PZLZa.png"
                     alt="User avatar"
+                    style="width: 36px; height: 36px; border-radius: 18px;"
                 />
                 </div>
                 <div class="received_msg">
