fix widget dissapearing

--- a/src/app/codes-list/codes-list.component.html
+++ b/src/app/codes-list/codes-list.component.html
@@ -6,21 +6,35 @@
         <mat-icon [hidden]="expanded"  (click)="expandToggle()">chevron_left</mat-icon>
     </div>
     <!-- Code Lists -->
-    <div style="height: inherit;"
-         [hidden]="expanded"> 
-         
-        POPO dededededededededejjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjddededdedededededede 
-
+    <div style="height: inherit; overflow-y: scroll"
+         [hidden]="expanded"
+         fxLayout="column"
+         fxLayoutGap="24px"> 
         <div class="side-bar">
             <div class="sec-widget" 
                  data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
             </div>
+        </div>
+        <div class="side-bar">
+            <div class="sec-widget" 
+                data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
             </div>
-            <div class="side-bar">
-                <div class="sec-widget" 
-                     data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
-                </div>
-                </div>
+        </div>
+        <div class="side-bar">
+            <div class="sec-widget" 
+                data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
+            </div>
+        </div>
+        <div class="side-bar">
+            <div class="sec-widget" 
+                data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
+            </div>
+        </div>
+        <div class="side-bar">
+            <div class="sec-widget" 
+                data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
+            </div>
+        </div>
     
         <div class="padded">
         <button (click)="inputCode()">
