add group chat update

--- a/src/app/add-group-chat/add-group-chat.component.html
+++ b/src/app/add-group-chat/add-group-chat.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
     <mat-label>Group name</mat-label>
-    <input matInput [(ngModel)]="groupName">
+    <input matInput [(ngModel)]="groupName" required>
 </mat-form-field>
 
 <!-- <mat-form-field appearance="fill" style="width: 250px;">
