Code sidebar submission to firebase

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -13,6 +13,5 @@
     </div>
     <!--Right Sidebar, Codes (can expand/collapse)-->
     <app-codes-list style="width: fit-content; height: 100%;"
-                    [chatID]="activeChatId"
-                    [hidden]="hidden"></app-codes-list>
+                    [chatID]="activeChatId"></app-codes-list>
 </div>
