--- a/src/app/codes-list/codes-list.component.html
+++ b/src/app/codes-list/codes-list.component.html
@@ -12,35 +12,34 @@
          fxLayoutGap="24px"> 
         <div class="side-bar">
             <div class="sec-widget" 
-                 data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
-            </div>
-        </div>
-        <div class="side-bar">
-            <div class="sec-widget" 
+                 data-id="A"
                 data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
             </div>
         </div>
         <div class="side-bar">
             <div class="sec-widget" 
+                data-id="B"
+                data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
+            </div>
+        </div>
+        <!--div class="side-bar">
+            <div class="sec-widget" 
+                data-id="C"
                 data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
             </div>
         </div>
         <div class="side-bar">
             <div class="sec-widget" 
+                data-id="D"
                 data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
             </div>
         </div>
         <div class="side-bar">
             <div class="sec-widget" 
+                data-id="E"
                 data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
             </div>
-        </div>
-    
-        <div class="padded">
-        <button (click)="inputCode()">
-            IDE
-        </button>
-        </div>
+        </div-->
     </div>
 
 </div>
