--- a/src/app/info-page/info-page.component.html
+++ b/src/app/info-page/info-page.component.html
@@ -1,29 +1,30 @@
-<!-- Old Code to show user avatar, display name, username, online
-    mat-card-header class="mat-card-header-positioning">
-    <img mat-card-avatar src={{userDetails.imageURL}} class="cursor-pointer" (click)="onSelectUser()">
-    <mat-icon [class.online]="millisecondsAfterLastOnline && millisecondsAfterLastOnline < 300000"  [class.away]="millisecondsAfterLastOnline && millisecondsAfterLastOnline >= 300000 && millisecondsAfterLastOnline < 900000" [class.offline]="!millisecondsAfterLastOnline || millisecondsAfterLastOnline >= 900000" class="online-icon">lens</mat-icon>
-    <mat-icon *ngIf="rank!='Member'" class="admin-icon">build</mat-icon>
-    <mat-card-title class="truncate cursor-pointer">displayname</mat-card-title>
-    <mat-card-subtitle class="truncate cursor-pointer user-name">username</mat-card-subtitle>
-</mat-card-header -->
-
 <div fxLayout="column" fxLayoutAlign="space-between" style="height: 100%; width: 100%;">
-
+    <div fxLayout="row" fxLayoutGap="16px">
+        <img
+            src="https://i.imgur.com/k2PZLZa.png"
+            alt="Group avatar"
+            style="height: 48px; border-radius: 24px;"
+        />
+        <div class="truncate" style="font-size: 24px;">{{chatDetails.title}}</div>
+    </div>
+    <div fxLayout="column" fxLayoutGap="16px">
+        <div>Members</div>
+        <div *ngFor="let member of members">
+            <img
+                src="https://i.imgur.com/k2PZLZa.png"
+                alt="User avatar"
+                style="height: 36px; border-radius: 18px;"
+            />
+            <div class="truncate">{{member.userName}}</div>
+        </div>
+    </div>
   <!-- list of tags displayed here -->
-
-      <mat-icon>groups</mat-icon>
-
-
-
+  <!-- <mat-icon>groups</mat-icon>
   <button (click)="invitefriends()">invite</button>
   <div style="height: 600px;">
-
-
     <div class="center">
-      <!--Scrollable list of groups/friends-->
+      <Scrollable list of groups/friends>
       <div class = "groupinfo">
-
-
           <div fxLayout="row" fxLayoutGap="16px" >
             <button *ngFor="let tag of tags">{{tag}}</button>
           </div>
@@ -31,21 +32,11 @@
           <mat-divider></mat-divider>
 
             <div fxLayout="column" fxLayoutGap="16px" >
-              <!-- iterate through the list here -->
-              <button *ngFor="let user of userid">{{user}}</button>
+              < iterate through the list here>
+              <!<button *ngFor="let user of userid">{{user}}</button> >
 
             </div>
-
-
       </div>
     </div>
-
-
-  </div>
-
-
+  </div> -->
 </div>
-
-I am group info.
-Fear me
-No fear meeeeeee
