--- a/src/app/chats/chats.component.html
+++ b/src/app/chats/chats.component.html
@@ -46,7 +46,7 @@
                         class="cursor-pointer"
                         style="height: 36px; border-radius: 18px;"
                     />
-                    <div class="cursor-pointer truncate">{{chat.name}}</div>
+                    <div class="cursor-pointer truncate">{{chat.title}}</div>
                 </div>
             </div>
         </div>
